syntax = "proto3";

option csharp_namespace = "Proto.Command.Sprints";

import "google/protobuf/timestamp.proto";
import "DTO/trace_data.proto";

service SprintCommandProtoService {
  rpc AddTicketToActiveSprint (AddTicketToActiveSprintCommandProto) returns (CommandResponse);
  rpc AddTicketToSprint (AddTicketToSprintCommandProto) returns (CommandResponse);
  rpc CreateSprint (CreateSprintCommandProto) returns (CommandResponse);
  rpc SetSprintActiveStatus (SetSprintActiveStatusCommandProto) returns (CommandResponse);
  rpc UpdateSprintData (UpdateSprintDataCommandProto) returns (CommandResponse);
}

message AddTicketToActiveSprintCommandProto {
  string ticketId = 1;
  TraceDataProto traceData = 2;
}

message AddTicketToSprintCommandProto {
  string sprintId = 1;
  string ticketId = 2;
  TraceDataProto traceData = 3;
}

message CreateSprintCommandProto {
  string sprintId = 1;
  string name = 2;
  google.protobuf.Timestamp startTime = 3;
  google.protobuf.Timestamp endTime = 4;
  bool isActive = 5;
  repeated string ticketIds = 6;
  TraceDataProto traceData = 7;
}

message SetSprintActiveStatusCommandProto {
  string sprintId = 1;
  bool isActive = 2;
  TraceDataProto traceData = 3;
}

message UpdateSprintDataCommandProto {
  string sprintId = 1;
  string name = 2;
  google.protobuf.Timestamp startTime = 3;
  google.protobuf.Timestamp endTime = 4;
  TraceDataProto traceData = 5;
}

message CommandResponse {
  bool success = 1;
}
